--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-TL47KLKZ.js" type="module"></script></body>
+<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-N6TFSKM6.js" type="module"></script></body>
 
 </html>
