--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-NYHZD4SI.js" type="module"></script></body>
+<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-WIJWEW3W.js" type="module"></script></body>
 
 </html>
